...
                    .font(Theme.Fonts.h1)
                    .padding()
                
                Spacer()
                
                Button(action: viewModel.signOut) {
                    Text("Sign Out")
                        .font(Theme.Fonts.bodyLargeSemiBold)
                        .foregroundColor(.white)
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(Theme.Colors.primary1)
                        .cornerRadius(16)
...
