...
    init(useCase : PostUseCases){
        self.useCase = useCase
    }
    
    func uploadPost() async {
        guard !imageCaption.isEmpty, selectedImage != nil else {
            error = "Please fill in all required fields"
            return
        }
            
        isLoading = true
        error = nil
        
...
